--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">fChat</string>
+    <string name="app_name">Chat App</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="recent_chats">Recent Chats</string>
     <string name="recent_calls">Recent Calls</string>
@@ -13,8 +13,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="fchat">FChat</string>
-
     <!-- Login -->
     <string name="login">Login</string>
     <string name="privacy">By signing in you are agreeing our <font color="#FF036BB9">Term and privacy policy</font></string>
