--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="chat">Chat</string>
     <string name="message_here">Message here</string>
     <string name="send">Send</string>
+    <string name="online">Online</string>
 </resources>
